# cuPathTracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: helper_math.h
results/scene01/: 10000spp.ppm  1000spp.ppm  100spp.ppm
results/scene02/: 10000spp.ppm  1000spp.ppm  100spp.ppm
results/scene03/: 10000spp.ppm
scenes/scene03/: scene03.mtl
src/: constants.hpp  device_array.cuh  main.cpp  path_tracer.cu  path_tracer.hpp  ray_tracer.cu  ray_tracer.hpp  types.cpp  types.hpp  utils.hpp
